objects/Markett__c.object
<CustomObject>
    <description>Sample Market Test</description>
    <fields>
        <fullName>AA_DMA_Rank__c</fullName>
        <label>AA DMA Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA_TV_Homes__c</fullName>
        <label>AA TV Homes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA__c</fullName>
        <label>AA % Homes</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asian_DMA_Rank__c</fullName>
        <label>Asian DMA Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asian_Homes__c</fullName>
        <label>Asian % Homes</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asian_TV_Homes__c</fullName>
        <label>Asian TV Homes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMA_Rank__c</fullName>
        <externalId>true</externalId>
        <label>DMA Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hispanic_or_Latinx_DMA_Rank__c</fullName>
        <label>Hispanic or Latinx DMA Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hispanic_or_Latinx_Homes__c</fullName>
        <label>Hispanic or Latinx % Homes</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hispanic_or_Latinx_TV_Homes__c</fullName>
        <label>Hispanic or Latinx TV Homes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homes__c</fullName>
        <label>% Homes</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TV_Homes__c</fullName>
        <label>TV Homes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Markett</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Markett Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>